--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.5.3",
-        "ping": "^0.4.4"
+        "ping": "^0.4.4",
+        "speedtest-net": "^2.2.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
